# mobat_project

./: .gitignore  Dockerfile  README.md  db.sqlite3  docker-compose.yml  entrypoint.sh  extract_codes.py  manage.py  pyproject.toml  readme.py
mobat_app/: Monitoring.py  apps.py  convert.py  models.py  urls.py  views.py  visu.py
mobat_app/Seasons/: 4.xlsx  PrimeiroSemestre.sqlite  PrimeiroSemestre2023  PrimeiroSemestre2024  SegundoSemestre.sqlite  SegundoSemestre2023  TerceiroSemestre.sqlite
mobat_app/Sheets/: PrimeiroSemestre2023.xlsx  PrimeiroSemestre2024.xlsx  SegundoSemestre2023.xlsx
mobat_app/management/commands/: load_sqlite_data.py
mobat_app/migrations/: 0001_initial.py
mobat_app/shapefiles/: ne_10m_admin_0_countries.README.docx
mobat_app/templates/: clusters.html  grafico_dispersao.html  graficos_comportamento.html  heatmap_ips.html  importancias_ml.html  index.html  mapeamento_features.html  reputacao_pais.html  score_average_mobat.html  selecao_caracteristicas.html  tabela_acuracia.html  upload_tabela_ips.html  visualizar_funcionalidades.html
mobat_app/utils/: data_helpers.py  ml_helpers.py  plot_helpers.py
mobat_app/views/: __init__.py  acuracia.py  clusters.py  dispersao.py  graficos.py  heatmap.py  importancia_ml.py  mapeamento.py  reputacao_pais.py  score_average.py  selecao.py  upload_tabela.py  visualizar.py
mobat_project/: asgi.py  settings.py  urls.py  wsgi.py
